[package]
name = "aoc2024"
version = "0.1.0"
authors = ["Olivia Kaufman <olivia@olivia.wtf>"]
edition = "2021"

[dependencies]
geo = "0.29.3"
itertools = "0.13.0"
lazy-regex = "3.3.0"
petgraph = "0.6.5"
rangemap = "1.5.1"
reqwest = {version = "0.12.9", features = ["blocking"]}

[dev-dependencies]
httpmock = "0.7.0"
rand = "0.8.5"
tempfile = "3.14.0"
