[package]
name = "aoc2024"
version = "0.1.0"
authors = ["Olivia Kaufman <olivia@olivia.wtf>"]
edition = "2024"

[dependencies]
geo = "0.30.0"
itertools = "0.14.0"
lazy-regex = "3.4.1"
petgraph = "0.8.2"
rangemap = "1.5.1"
reqwest = {version = "0.12.22", features = ["blocking"]}
rayon = "1.10.0"
z3 = "0.13.3"

[dev-dependencies]
httpmock = "0.7.0"
rand = "0.9.2"
tempfile = "3.20.0"
